--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <nav>
         <ul>
             <li>
-                <a href="manu.html" target="_blank"rel=>manual</a>
+                <a href="manu.html" target="_blank"rel=>click aqui para acessar manual</a>
             </li>
             <li>
-                <a href="prog.html"target="_blank">preventivas</a>
+                <a href="prog.html"target="_blank">click aqui para acessar preventivas</a>
                 
             </li>
             <li> 
             
-                <a href="esqu.html" target="_blank">peças</a>
+                <a href="esqu.html" target="_blank">click aqui para acessar rotinas</a>
             </li>
         </ul>
     </nav>
