--- a/manu.html
+++ b/manu.html
@@ -13,8 +13,8 @@
     <h1>SEGUE ABAIXO OS LINK PARA MANUAIS E PROCESSO DE SOLDA A ARCO.</h1>
 
    
-   <a href="https://www.bing.com/ck/a?!&&p=1c0c8cfd111e3d2eJmltdHM9MTcxMDExNTIwMCZpZ3VpZD0wYTMzNGJjZi04MTU3LTZlNmMtMzQwMC01OTUxODA5OTZmOTYmaW5zaWQ9NTE5Mg&ptn=3&ver=2&hsh=3&fclid=0a334bcf-8157-6e6c-3400-595180996f96&psq=DCE+1500+Emhart&u=a1aHR0cHM6Ly93d3cubWFudWFsc2xpYi5jb20vbWFudWFsLzE4ODgxMjkvRW1oYXJ0LVRla25vbG9naWVzLVR1Y2tlci1EY2UtMTUwMC5odG1s&ntb=1"> click aqui para acessar o manuais-1</a>
-   <p>  <a href="https://www.bing.com/ck/a?!&&p=ade3bfeaec53ededJmltdHM9MTcxMDExNTIwMCZpZ3VpZD0wYTMzNGJjZi04MTU3LTZlNmMtMzQwMC01OTUxODA5OTZmOTYmaW5zaWQ9NTIxNA&ptn=3&ver=2&hsh=3&fclid=0a334bcf-8157-6e6c-3400-595180996f96&psq=DCE+1500+Emhart&u=a1aHR0cHM6Ly93d3cubWFudWFsc2xpYi5jb20vcHJvZHVjdHMvRW1oYXJ0LVRla25vbG9naWVzLVR1Y2tlci1EY2UtMTUwMC0xMTExMTQwOC5odG1s&ntb=1">click aqui para acessar o manuais-2</a></p>
+   <a href="https://r.search.yahoo.com/_ylt=AwrhbqlHSE5maLoIjeHz6Qt.;_ylu=Y29sbwNiZjEEcG9zAzEEdnRpZAMEc2VjA3Ny/RV=2/RE=1716435144/RO=10/RU=http%3a%2f%2fstanleyengineeredfastening.com.br%2fsite%2fdownloads%2fpinos_tucker.pdf/RK=2/RS=.T5jNi0ONudeQl5y_KAAK.72lUg-"> click aqui para acessar o manuais-1</a>
+   <p>  <a href="https://r.search.yahoo.com/_ylt=AwriqnM.R05mZKAImDHz6Qt.;_ylu=Y29sbwNiZjEEcG9zAzYEdnRpZAMEc2VjA3Ny/RV=2/RE=1716434879/RO=10/RU=https%3a%2f%2fwww.manualslib.es%2fmanual%2f18301%2fEmhart-Teknologies-Dce-1500.html/RK=2/RS=XSDWuvif.iviyDSjAFB4A6ttjkQ-">click aqui para acessar o manuais-2</a></p>
    
 </body>
 </html>
