--- a/manu.html
+++ b/manu.html
@@ -12,9 +12,8 @@
 <body>
     <h1>SEGUE ABAIXO OS LINK PARA MANUAIS E PROCESSO DE SOLDA A ARCO.</h1>
 
-   
-   <a href="https://r.search.yahoo.com/_ylt=AwrhbqlHSE5maLoIjeHz6Qt.;_ylu=Y29sbwNiZjEEcG9zAzEEdnRpZAMEc2VjA3Ny/RV=2/RE=1716435144/RO=10/RU=http%3a%2f%2fstanleyengineeredfastening.com.br%2fsite%2fdownloads%2fpinos_tucker.pdf/RK=2/RS=.T5jNi0ONudeQl5y_KAAK.72lUg-"> click aqui para acessar o manuais-1</a>
    <p>  <a href="https://r.search.yahoo.com/_ylt=AwriqnM.R05mZKAImDHz6Qt.;_ylu=Y29sbwNiZjEEcG9zAzYEdnRpZAMEc2VjA3Ny/RV=2/RE=1716434879/RO=10/RU=https%3a%2f%2fwww.manualslib.es%2fmanual%2f18301%2fEmhart-Teknologies-Dce-1500.html/RK=2/RS=XSDWuvif.iviyDSjAFB4A6ttjkQ-">click aqui para acessar o manuais-2</a></p>
+  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/zQz2bLxYLWQ?si=tPskLT3-BjiyVFx2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
    
 </body>
 </html>
